Fri Dec  7 13:07:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* doc/forwardable.rd: Remove stale documentation file
	* lib/forwardable.rb: Merge documentation from doc/forwardable.rd

Fri Dec  7 09:47:35 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (time_mdump): dump timezone string to private instance variable
	  on marshaling.

	* time.c (time_mload): load timezone string from private instance
	  variable named 'zone'.

Fri Dec  7 01:15:07 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* ext/fiddle/lib/fiddle/function.rb (Fiddle::Function#name): new
	  attribute needed to switch Win32::Registry from DL to Fiddle.

	* ext/fiddle/lib/fiddle/import.rb (import_function, bind_function):
	  set function name to the returned Fiddle::Function object.

Fri Dec  7 00:11:44 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_refinement.rb: fix some tests to use neither
	  Module#using nor Module#module_eval.

Thu Dec  6 23:27:50 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (ruby_Init_refinement): a new function to enable
	  Refinements with a warning "Refinements are experimental...".

	* ext/refinement/refinement.c, ext/refinement/extconf.rb: a new
	  extension library to enable Refinements.

Thu Dec  6 18:23:05 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* revised r37993 to avoid SEGV/ILL in tests.  In r37993, a method
	  entry with VM_METHOD_TYPE_REFINED holds only the original method
	  definition, so ci->me is set to a method entry allocated in the
	  stack, and it causes SEGV/ILL.  In this commit, a method entry
	  with VM_METHOD_TYPE_REFINED holds the whole original method entry.
	  Furthermore, rb_thread_mark() is changed to mark cfp->klass to
	  avoid GC for iclasses created by copy_refinement_iclass().

	* vm_method.c (rb_method_entry_make): add a method entry with
	  VM_METHOD_TYPE_REFINED to the class refined by the refinement if
	  the target module is a refinement.  When a method entry with